--- a/sidebar/style/sidebar.css
+++ b/sidebar/style/sidebar.css
@@ -58,6 +58,7 @@ body.dark{
     display: flex;
     align-items: center;
     margin-top: 10px;
+    cursor: pointer;
 }
 .sidebar header .image,
 .sidebar .icon{
@@ -177,12 +178,28 @@ body.dark .sidebar header .toggle{
 .sidebar li a:hover{
     background-color: var(--primary-color);
 }
+
 .sidebar li a:hover .icon,
 .sidebar li a:hover .text{
     color: var(--sidebar-color);
 }
+
+.sidebar li a.active{
+    background-color: var(--primary-color);
+}
+
+.sidebar li a.active .icon,
+.sidebar li a.active .text{
+    color: var(--sidebar-color);
+}
+
 body.dark .sidebar li a:hover .icon,
 body.dark .sidebar li a:hover .text{
+    color: var(--text-color);
+}
+
+body.dark .sidebar li a.active .icon,
+body.dark .sidebar li a.active .text{
     color: var(--text-color);
 }
 .sidebar .menu-bar{
@@ -271,4 +288,18 @@ body.dark .switch::before{
 }
 body.dark .home .text{
     color: var(--text-color);
+}
+
+#logout{
+    cursor: pointer;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    & i {
+        font-size: 25px;
+    }
 }
